--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/NinaVavr/lab-web-scraping-single-page">Music Reccomender</a></h2>
+										<h2><a href="https://github.com/NinaVavr/lab-web-scraping-single-page">Music Recommender</a></h2>
 									</header>
 									<a href="https://github.com/NinaVavr/lab-web-scraping-single-page" class="image fit"><img src="images/music.jpeg" alt="" /></a>
-									<p>In this project, a music reccomender was created to retrieve songs that are in the top 100 charts or in our base of songs that share the same cluster, obtained through the variables found in the Spotify uri using web scraping</p>
+									<p>In this project, a music recommender was created to retrieve songs that are in the top 100 charts or in our base of songs that share the same cluster, obtained through the variables found in the Spotify uri using web scraping</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/NinaVavr/lab-web-scraping-single-page" class="button">View Project</a></li>
 									</ul>
