--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="https://github.com/NinaVavr/Final_Project_Sleep_Disorders">Sleep disorders and Lifestyle</a></h2>
-									<p>In this project, it is examined the correlation between sleep disorders and heart rate, age, BMI, activity, quality of sleep, sleep duration etc. There are used tools as Python to extract, clean, and transform data, data visualization, hypothesis test, statistical analysis, web scraping, predictive analytics, data storytelling and critical thinking. </p>
+									<p>In this project, it is examined the correlation between sleep disorders and heart rate, age, BMI, activity, quality of sleep, sleep duration etc. I utilized Python to extract, clean, and transform the data, performed data visualization, conducted hypothesis tests and statistical analysis, implemented web scraping techniques, applied predictive analytics, and employed data storytelling and critical thinking to present meaningful insights.</p>
 								</header>
 								<a href="https://github.com/NinaVavr/Final_Project_Sleep_Disorders" class="image main"><img src="images/Artificial-Intelligence-4.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -70,7 +70,7 @@
 										<h2><a href="https://github.com/NinaVavr/lab-web-scraping-single-page">Music Recommender</a></h2>
 									</header>
 									<a href="https://github.com/NinaVavr/lab-web-scraping-single-page" class="image fit"><img src="images/music.jpeg" alt="" /></a>
-									<p>In this project, a music recommender was created to retrieve songs that are in the top 100 charts or in our base of songs that share the same cluster, obtained through the variables found in the Spotify uri using web scraping</p>
+									<p>In this project, I developed a music recommender system that retrieves songs from either the top 100 charts or our database of songs based on their clustering, using web scraping techniques to extract relevant variables from Spotify URIs.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/NinaVavr/lab-web-scraping-single-page" class="button">View Project</a></li>
 									</ul>
@@ -81,7 +81,7 @@
 										<h2><a href="https://github.com/NinaVavr/Netflix_project">Netflix, movie's and financial analysis</a></h2>
 									</header>
 									<a href="https://github.com/NinaVavr/Netflix_project" class="image fit"><img src="images/netflix.png" alt="" /></a>
-									<p>In this project, we observe Netflix industry growing towards series and we, also, conduct a financial analysis. It is used Python and MySQL to extract, clean, and transform data, data visualization, hypothesis testing and data storytelling.</p>
+									<p>In this project, I investigated the evolving landscape of the Netflix industry with a specific focus on the rise of series content, accompanied by a thorough financial analysis. Leveraging Python and MySQL, I employed data extraction, cleaning, and transformation techniques, along with data visualization, hypothesis testing, and data storytelling, to uncover valuable insights.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/NinaVavr/Netflix_project" class="button">View Project</a></li>
 									</ul>
